# kokoro-tiny

./: .gitignore  Cargo.toml  LICENSE  README.md  test_unlimited.sh
docs/plans/: 2025-11-19-marine-integration-design.md
examples/: all_voices.rs  debug_phonemes.rs  debug_tokens.rs  debug_words.rs  demo_fix.rs  mcp_example.rs  story_time.rs  test_american.rs  test_backwards_compat.rs  test_english.rs  test_v2_punctuation.rs  unlimited_speech.rs
scripts/: manage.sh
src/: lib.rs  main.rs  mcp_main.rs  mcp_server.rs  mem8_bridge.rs  mem8_voice.rs  streaming.rs
